--- a/flask_3/templates/form_base.html
+++ b/flask_3/templates/form_base.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 </head> 
-<body>
+<body class="bg-dark">
 
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark text-light">
         <ul class="navbar-nav">
