--- a/flask_3/templates/work_form_page.html
+++ b/flask_3/templates/work_form_page.html
@@ -16,12 +16,12 @@
             </div>
             
             <div class="form-group col-md-6">
-                <label for="password">Password</label>
+                <label for="password">Password : </label>
                 <input type="password" class="form-control"  placeholder="Password" name="password">
             </div>  
             
             <div class="form-group col-md-6">
-                <label for="confirm_password">Re Enter Password</label>
+                <label for="confirm_password">Re Enter Password : </label>
                 <input type="password" class="form-control" placeholder="Confirm Password" name="confirm_password">
             </div>
             
