--- a/flask_4/templates/homepage.html
+++ b/flask_4/templates/homepage.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    
     <p>
         {% if breed %}
             <p>The breed you entered is {{breed}}</p>
@@ -20,8 +23,13 @@
     
     <form method = 'POST'>
         {{ form.hidden_tag() }}
-        {{ form.breed.label }} {{form.breed }}
+        <h1>{{ form.breed.label }}</h1> {{form.breed }}
         {{ form.submit }}
     </form>
+            
+    
+    
+    
+    </div>
 </body>
 </html>
